Fix title for new name

--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -1,4 +1,4 @@
-<div class='header-title'>Capshuner</div>
+<div class='header-title'>Capshunr</div>
 <div class='pull-right'>
   <div class='button' (click)='chooseFileSave()'>
     <div class='title'>Save Subtitle...</div>
