Fix angular7 cli start script. Minor text tweak

--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -7,7 +7,7 @@
 </div>
 <div class='button' (click)='chooseVideo()'>
   <div class='title'>Load Movie...</div>
-  <div class='title-sub'>(mp4 or any web readable)</div>
+  <div class='title-sub'>(mp4 or any web playable)</div>
 </div>
 <div class='button' (click)='chooseSubtitle()'>
   <div class='title'>Load Subtitle...</div>
